docs/CSSwebsite.css
/*The background of the webpages color*/
body {
    background-color: #84a98c;
}

/*Adding things into the "p" element more then adding more CSS and other Elements and Attributes helped with organizational purposes*/
p {
    background-color: #cad2c5;
    color: #2f3e46;
    font-family: arial, sans-serif;
    font-size: 120%;
    /*With a border it give the paragraph more of a pop*/
    border-style: solid;
    border-width: 6px;
    border-color: #2f3e46;
    float:right;
    /*Adding the padding to the side allowed me to bring my paragraohs out from huggin the lines*/
    padding-left: 10px;
    padding-right: 12px;
    padding-top: 5px;
}

/*First paragraphs indentation*/
.indent {
    text-indent: 30px;
}

.container {
    display: flex;
    align-items: center;
    justify-content: center
}

/*Navigational Bar*/
.topnav {
    overflow: hidden;
    background-color: #2f3e46;
}

.topnav a {
    float: left;
    color: #98c1d9;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

.topnav a:hover {
    background-color: #52796f;
    color: white;
}

.topnav a.split {
    float: right;
    background-color: #52796f;
    color: white;
}

.topnav a.active {
    background-color: #cad2c5;
    color: black;
}

/*Image CSS height and width is enbedded code within HTML*/
img {
    padding-top: 30px;
    padding-right: 30px;
    float: left;
}

/*URL link color*/ 
a{
    color:fuchsia;
}

/*Tester on images inside div*/
.tester{
    width: 300px;
  padding: 50px;
  margin: 20px;
}

